# uc-integration-bluos

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  CONTRIBUTING.md  README.md  devenv.cli.nix  devenv.desktop.nix  devenv.nix  devenv.vscode.nix  devenv.yaml  driver.json  pyproject.toml  requirements.txt  test-requirements.txt
.gitea/workflows/: build.yml
.github/workflows/: build.yml  release.yml
intg-bluos/: __init__.py  bluos.py  config.py  discover.py  driver.py  entity_mixin.py  media_player.py  remote_entity.py  select_entity.py  sensor_entity.py  setup_flow.py
tests/: __init__.py  test_bluos.py  test_browse.py  test_config.py  test_discover.py  test_driver.py  test_grouping.py  test_media_player.py  test_remote_entity.py  test_select_entity.py  test_setup_flow.py
