[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-intg-bluos"
version = "0.3.0"
description = "BluOS integration for Unfolded Circle Remote"
readme = "README.md"
license = {text = "MPL-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Bart"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ucapi==0.5.2",
    "pyblu>=0.7.0",
    "pyee~=13.0.0",
    "zeroconf>=0.80.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "aioresponses>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["intg-bluos*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "global-statement",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
